[package]
name = "jito-core"
description = "Jito relayer core code"
version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
crossbeam-channel = { workspace = true }
dashmap = { workspace = true }
jito-rpc = { workspace = true }
log = { workspace = true }
solana-client = { workspace = true }
solana-core = { workspace = true }
solana-metrics = { workspace = true }
solana-perf = { workspace = true }
solana-sdk = { workspace = true }
solana-streamer = { workspace = true }
thiserror = { workspace = true }
