[package]
name = "deez_engine"
description = "Relayer Deez Engine Client"
version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { workspace = true }
jito-core = { workspace = true }
log = { workspace = true }
reqwest = "0.11.27"
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"]}
fast-socks5 = { workspace = true }
tokio-stream = { workspace = true }
jito-block-engine = { workspace = true }
sha2 = "0.10.8"
async-trait = "0.1.83"
